# cat-ademic

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  JOURNAL_DATASET_PLAN.md  README.md  pyproject.toml
examples/: .test_all_models.py  test_all_models.py  test_all_providers.py  test_batch_mode.py  test_explore_corpus.py  test_extract_images.py  test_huggingface_autodetect.py  test_image_ensemble.py  test_image_functions.py  test_image_providers.py  test_multi_class_ensemble.py  test_params_8_12.py  test_pdf_image_mode.py  test_pdf_providers.py  test_pdf_report.py
src/catademic/: __about__.py  __init__.py  _academic.py  _batch.py  _category_analysis.py  _providers.py  _utils.py  classify.py  explore.py  extract.py  image_functions.py  main.py  pdf_functions.py  summarize.py  text_functions.py  text_functions_ensemble.py
src/catademic/calls/: all_calls.py  image_stepback.py  pdf_stepback.py  stepback.py  top_n.py
