[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cat-ademic"
dynamic = ["version"]
description = 'LLM-powered category analysis for academic paper abstracts'
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
keywords = ["llm","categorizer","academic papers", "openalex", "text classification", "structured output"]
authors = [
  { name = "Chris Soria", email = "chrissoria@berkeley.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pandas",
  "tqdm",
  "requests",
  "openai",
  "anthropic",
  "perplexityai"
]

[project.optional-dependencies]
pdf = ["PyMuPDF>=1.23.0"]

[project.urls]
Documentation = "https://github.com/chrissoria/cat-ademic#readme"
Issues = "https://github.com/chrissoria/cat-ademic/issues"
Source = "https://github.com/chrissoria/cat-ademic"

[tool.hatch.version]
path = "src/catademic/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/catademic tests}"

[tool.hatch.build.targets.wheel]
packages = ["src/catademic"]
include = [
    "src/catademic/**/*.py",
    "src/catademic/images/*",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/catademic/**/*.py",
    "src/catademic/images/*",
]

[tool.coverage.run]
source_pkgs = ["catademic", "tests"]
branch = true
parallel = true
omit = [
  "src/catademic/__about__.py",
]

[tool.coverage.paths]
catademic = ["src/catademic", "*/cat-ademic/src/catademic"]
tests = ["tests", "*/cat-ademic/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
